--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -46,9 +46,9 @@ server {
     proxy_send_timeout <%= @out[:proxy_send_timeout] || '60' %>;
 
     # return 301 https://$host$request_uri;
-    if ($http_x_forwarded_proto != "https") {
-      rewrite ^(.*)$ https://$server_name$1 permanent;
-    }
+    #if ($http_x_forwarded_proto != "https") {
+    #  rewrite ^(.*)$ https://$server_name$1 permanent;
+    #}
 
     # If you don't find the filename in the static files
     # Then request it from the <%= @name %> server
