--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -45,10 +45,13 @@ server {
     proxy_read_timeout <%= @out[:proxy_read_timeout] || '60' %>;
     proxy_send_timeout <%= @out[:proxy_send_timeout] || '60' %>;
 
-    # return 301 https://$host$request_uri;
-    #if ($http_x_forwarded_proto != "https") {
-    #  rewrite ^(.*)$ https://$server_name$1 permanent;
-    #}
+    <%# 
+      return 301 https://$host$request_uri;
+    %>
+
+    if ($http_x_forwarded_proto != "https") {
+      rewrite ^(.*)$ https://$server_name$1 permanent;
+    }
 
     # If you don't find the filename in the static files
     # Then request it from the <%= @name %> server
