--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -46,14 +46,18 @@ server {
     proxy_send_timeout <%= @out[:proxy_send_timeout] || '60' %>;
 
     if ($http_x_forwarded_proto != "https") {
-      return 301 https://$server_name$request_uri;
+      rewrite ^(.*)$ https://$server_name$1 permanent;
     }
 
     <%# 
-      return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
 
     if ($http_x_forwarded_proto != "https") {
       rewrite ^(.*)$ https://www.metromart.com permanent;
+    }
+    
+    if ($http_x_forwarded_proto != "https") {
+      return 301 https://$server_name$request_uri;
     }
     %>
 
