--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -45,21 +45,10 @@ server {
     proxy_read_timeout <%= @out[:proxy_read_timeout] || '60' %>;
     proxy_send_timeout <%= @out[:proxy_send_timeout] || '60' %>;
 
+    # Any request that did not originally come in to the ELB over HTTPS gets redirected
     if ($http_x_forwarded_proto != "https") {
       rewrite ^(.*)$ https://$server_name$1 permanent;
     }
-
-    <%# 
-    return 301 https://$host$request_uri;
-
-    if ($http_x_forwarded_proto != "https") {
-      rewrite ^(.*)$ https://www.metromart.com permanent;
-    }
-    
-    if ($http_x_forwarded_proto != "https") {
-      return 301 https://$server_name$request_uri;
-    }
-    %>
 
     # If you don't find the filename in the static files
     # Then request it from the <%= @name %> server
@@ -91,6 +80,7 @@ server {
   location / {
     return 301 https://www.$server_name$request_uri;
 
+    # Add HTTP Strict Transport Security for good measure
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;";
   }
 }
