--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -73,6 +73,8 @@ server {
   }
 }
 
+# If request is made to the bare domain (i.e. metromart.com)
+# Issue a redirect 301 response
 server {
   listen 80;
   server_name metromart.com;
