--- a/templates/default/appserver.nginx.conf.erb
+++ b/templates/default/appserver.nginx.conf.erb
@@ -19,6 +19,11 @@ server {
   keepalive_timeout <%= @out[:keepalive_timeout] || '15' %>;
   send_timeout <%= @out[:send_timeout] || '10' %>;
 
+  location /ping {
+    access_log off;
+    return 200;
+  }
+
   location / {
     try_files $uri/index.html $uri/index.htm @<%= @name %>;
   }
@@ -78,6 +83,11 @@ server {
 server {
   listen 80;
   server_name metromart.com;
+
+  location /ping {
+    access_log off;
+    return 200;
+  }
 
   location / {
     return 301 https://www.$server_name$request_uri;
